<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="200dp"
        android:layout_height="170dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/logo"
        android:padding="7dp"
        android:scaleType="centerCrop"
        />
    <EditText
        android:id="@+id/pdfname"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="200dp"
        android:hint="@string/enter_your_gmail_id"
        android:inputType="textEmailAddress"
        android:textStyle="bold"
        android:textColor="@color/common_google_signin_btn_text_dark_focused" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="260dp"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="350dp"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/noAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_sign_up_here"
        android:layout_marginTop="410dp"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_marginTop="470dp"
        android:layout_centerHorizontal="true"
        />
    <ProgressBar
        android:id="@+id/pbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        />

</RelativeLayout>