<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/logo"
        android:padding="7dp"
        android:scaleType="centerCrop"
        />
    <EditText
        android:id="@+id/pdfname"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="200dp"
        android:hint="@string/enter_your_gmail"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="bold|italic"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="260dp"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="bold|italic"
        android:gravity="center_horizontal" />
    <ProgressBar
        android:id="@+id/pbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"

        />

    <Button
        android:id="@+id/signup"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:background="@android:color/transparent"
        android:text="@string/sign_up"
        android:textColor="#000000" />

    <Button
        android:id="@+id/haveAccount"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="445dp"
        android:background="@android:color/transparent"
        android:text="@string/already_i_have_an_account"

        android:textColor="#131112"
        android:textSize="18sp" />

</RelativeLayout>