<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



    <ImageView
        android:id="@+id/userprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:scaleType="fitCenter"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        />

    <TextView
        android:id="@+id/unameA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userprofile"
        android:text="@string/username"
        android:textStyle="italic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/chatA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat_now"
        android:layout_below="@+id/unameA"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/closeA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chatA"
        android:layout_centerHorizontal="true"
        android:text="@string/close_dialog"
        android:layout_marginTop="10dp"
        />


</RelativeLayout>