<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

<!--    <Button-->
<!--        android:id="@+id/pickImage"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/pick_profile_pic"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_marginTop="30dp"-->
<!--        />-->

    <!--
    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp" /> -->
    <ImageView
        android:id="@+id/pickImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_baseline_file_upload_24"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        />

    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:padding="7dp"
        android:scaleType="centerCrop"
        />
    <EditText
        android:id="@+id/phoneA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/enter_your_phone_number"
        android:layout_centerInParent="true"
        />

    <EditText
        android:id="@+id/usernameA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name"
        android:layout_below="@+id/phoneA"
        android:layout_centerInParent="true"
        />

    <Button
        android:id="@+id/loginA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish_setup"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>